--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,9 @@
       <p>Predicted Label: <span id="politicalBiasLabel"></span></p>
       <p>Probability: <span id="politicalBiasProbability"></span></p>
     </div>
+    <div id="speedometerContainer">
+      <canvas id="speedometer"></canvas>
+    </div>
     <div id="selectedTextSection">
       <h3>Selected Text</h3>
       <p>Selected Text: <span id="selectedText"></span></p>
