comments and TODOs added

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- todo: manifest.json dosyasında ikonlar değişebilir. fake news detector ile aynı ikonlar mevcut -->
+<!-- tüm fake news yazan yerler political biasa çevirildi -->
 <html>
   <head>
     <title>Political Bias Detector & Word Counter</title>
