--- a/popup.html
+++ b/popup.html
@@ -65,11 +65,11 @@
         ><span>t</span><span>e</span><span>c</span><span>t</span><span>o</span
         ><span>r</span>
       </h3>
-      <p>Predicted Label: <span id="politicalBiasLabel"></span></p>
+      <p>
+        Predicted Label: <span id="politicalBiasLabel"></span
+        ><canvas id="speedometer"></canvas>
+      </p>
       <p>Probability: <span id="politicalBiasProbability"></span></p>
-      <div id="speedometerContainer">
-        <canvas id="speedometer"></canvas>
-      </div>
     </div>
 
     <div id="selectedTextSection">
