--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
 
       span {
         font-weight: bold;
-        color: #8100e0;
+        color: #563ce7;
         animation: pulse 1s infinite;
       }
 
@@ -66,8 +66,9 @@
         ><span>r</span>
       </h3>
       <p>
-        Predicted Label: <span id="politicalBiasLabel"></span
-        ><canvas id="speedometer"></canvas>
+        Predicted Label:
+        <span id="politicalBiasLabel" style="display: none"></span
+        ><canvas id="speedometer" id="politicalBiasLabel"></canvas>
       </p>
       <p>Probability: <span id="politicalBiasProbability"></span></p>
     </div>
