--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>Political Bias Detector & Word Counter</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link
