--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
       #politicalBiasSection h3 {
         font-family: Oddval Variable;
         font-size: 4vh;
-        color: #c11f8b;
+        color: #664ab6;
         white-space: nowrap;
         line-height: 90%;
         font-variation-settings: "wght" 900, "ital" 1;
